WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
10993
GMail Editor: Caret doesn't always position itself after list marker
https://bugs.webkit.org/show_bug.cgi?id=10993
Summary
GMail Editor: Caret doesn't always position itself after list marker
Chris Petersen
Reported
2006-09-22 23:45:12 PDT
When I create a new list (after a linebreak), the caret doesn't position itself to the right of the newly created list marker. 1) With TOT webkit
r16541
, login to your gmail account 2) Create a new message (with rich formatting) 3) Place caret in message body and press the return key once 4) Notice where the caret is positioned in the message. Now, click either the ordered or unordered list icon on the toolbar 5) The list marker is inserted but caret doesn't move to just after the marker
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Petersen
Comment 1
2006-09-23 12:47:32 PDT
This is covered in <
rdar://problem/4747450
>.
Justin Garcia
Comment 2
2006-10-24 18:44:35 PDT
17276
Justin Garcia
Comment 3
2006-10-31 12:42:58 PST
Reopening because I backed out the changed that fixed this because of performance issues.
Justin Garcia
Comment 4
2007-01-24 17:22:15 PST
r18895
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug