WebCore/editing/visible_units.cpp
@@ -85,8 +85,7 @@ static VisiblePosition previousBoundary(const VisiblePosition &c, unsigned (*sea
     }
     
     if (it.atEnd() && next == 0) {
-        RefPtr<Range> range(it.range());
-        pos = Position(range->startContainer(exception), range->startOffset(exception));
+        pos = it.range()->startPosition();
     } else if (!it.atEnd() && it.length() == 0) {
         // Got a zero-length chunk.
         // This means we have hit a replaced element.
@@ -161,9 +160,7 @@ static VisiblePosition nextBoundary(const VisiblePosition &c, unsigned (*searchF
     }
     
     if (it.atEnd() && next == string.length()) {
-        RefPtr<Range> range(it.range());
-        int exception = 0;
-        pos = Position(range->startContainer(exception), range->startOffset(exception));
+        pos = it.range()->startPosition();
     } else if (!it.atEnd() && it.length() == 0) {
         // Got a zero-length chunk.
         // This means we have hit a replaced element.
@@ -185,7 +182,7 @@ static VisiblePosition nextBoundary(const VisiblePosition &c, unsigned (*searchF
         // Use the character iterator to translate the next value into a DOM position.
         CharacterIterator charIt(searchRange.get());
         charIt.advance(next - 1);
-        pos = Position(charIt.range()->endContainer(ec), charIt.range()->endOffset(ec));
+        pos = charIt.range()->endPosition();
     }
 
     // generate VisiblePosition, use UPSTREAM affinity if possible
